# python-project-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: main.yml  release.yml
pkg/: __init__.py
tests/: test_version.py
